# pdftomd

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
cli/: pdf_cli.py  pdf_to_md.py  pyproject.toml  requirements.txt
cli/tests/: test_benchmark_reproducibility_evidence.py  test_default_output_path_contract.py
cli/tests/scripts/: benchmark_reproducibility.py
tests/: test_cli_output.py
