[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfminer-pdf-to-markdown"
version = "0.0.0"
description = "Minimal bootstrap for PDF-to-Markdown CLI TDD"
requires-python = ">=3.10"
dependencies = [
  "pdfminer.six",
  "pdfplumber",
  "pypdf",
]

[project.optional-dependencies]
ocr = [
  "pdf2image",
  "rapidocr_onnxruntime",
]
full = [
  "pdf2image",
  "rapidocr_onnxruntime",
]

[project.scripts]
pdftomd = "pdf_cli:run"

[tool.setuptools]
py-modules = ["pdf_cli", "pdf_to_md"]
